[package]
name = "gear-ros"
version = "0.0.1"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]

[dependencies]
assimp = "0.3.0"
env_logger = "0.4.3"
gear = "0.1.3"
glfw = "0.15.0"
k = "0.9.0"
log = "0.3.8"
nalgebra = "0.13.0"
ncollide = "0.13.0"
rosrust = "0.6.1"
rosrust_codegen = "0.6.1"
serde = "1.0.25"
serde_derive = "1.0.25"
structopt = "0.1.0"
structopt-derive = "0.1.0"
trajectory = "0.0.1"
urdf-rs = "0.4.0"
urdf-viz = "0.8.3"

[build-dependencies]
rosrust_codegen = "0.6.1"

[patch.crates-io]
gear = { path = "../gear" }
# rosrust = { path = "../rosrust/rosrust" }