[package]
name = "gear-ros"
version = "0.0.1"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]

[dependencies]
env_logger = "0.4.3"
gear = "0.3.0"
glfw = "0.19.0"
k = "0.12.0"
log = "0.3.8"
nalgebra = "0.15.0"
ncollide3d = "0.16.0"
rand = "0.3.0"
# rand_core is needed to fix compile error
rand_core = "0.2.2"
rosrust = "0.7.1"
serde = "1.0.25"
serde_derive = "1.0.25"
structopt = "0.2.0"
structopt-derive = "0.1.0"
trajectory = "0.0.1"
urdf-rs = "0.4.0"
urdf-viz = "0.12.0"

[build-dependencies]
rosrust_codegen = "0.6.1"

[patch.crates-io]
gear = { path = "../gear" }
# rosrust = { path = "../rosrust/rosrust" }
